# dataiku_assignment

./: .gitignore  README.md  pyproject.toml  requirements.txt
code/: 01_eda.ipynb  02_modeling.ipynb
data/: README.md
outputs/: census_data_dictionary.xlsx
outputs/models/: feature_names.npy  lgbm_pipeline.joblib  metrics.json  preprocessor.joblib
slides/: census_income_prediction.pptx
src/: utils.py
