[project]
name = "census-income-analysis"
version = "0.1.0"
description = "Dataiku Senior DS Assessment: US Census Income Prediction"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "seaborn>=0.13",
    "matplotlib>=3.8",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "shap>=0.45",
    "optuna>=3.6",
    "imbalanced-learn>=0.12",
    "python-pptx>=1.0",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "joblib>=1.4",
    "pyarrow>=16.0",
    "nbformat>=5.10",
    "tqdm>=4.66",
    "zstandard>=0.25.0",
    "pypdf>=6.13.1",
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
